- Made the system sense when properties are not available in a language one has chosen in the structure-tool editor. Before they were blank or undefined if you choose a language not supported on that page 
- Added so inputCharacterEncoding can be different for cms and deliver i application settings. No more need to mess around in web.xml for that.

-------------------------------------------------------------------------------------
- InfoGlue 2.3.5 Final
-------------------------------------------------------------------------------------

Release notes
---------------------------------------
The InfoGlue Team will not rest for the summer just yet. InfoGlue 2.3.5 is available now.
This release contains better portlet support, JBoss 4 experimental support and a whole lot of work 
concerning caching and threading. Check out the long list of improvements below.

Thanx to all involved!!

The InfoGlue Team


Abbreviated Changelog from 2.3 Final 
---------------------------------------
- Made infoglue divide the transaction into smaller ones when using the getMatchingContents. It often throws Maximum cursors reached in oracle otherwise.
- Fixed so save and exit actually saves in application settings
- Made deletion of server node also clean up in the database propertyset 
- Added functionality so the folder properties is inherited when creating new folder, also made so the properties is removed when content is deleted.
- Added a getIsDecorated() method in the TemplateController to check if the pagenode is render with editonsight.
- Made the decorated tags in editonsight use the setting of the cms property getRequestArgumentDelimiter.
- Fixed the getContentAttribute(Integer contentId, String attributeName, boolean clean) in EditOnSiteBasicTemplateController.
- Fixed html compliance in some files in cms/contenttool/
- Fixed bug in import if repository references another existing repository.