@@ -351,6 +351,11 @@
         	<required>true</required>
 	        <rtexprvalue>false</rtexprvalue>
     	</attribute>
+    	<attribute>
+  			<name>comparatorClass</name>
+        	<required>false</required>
+			<rtexprvalue>false</rtexprvalue>
+		</attribute>
 	</tag>	 
 	<tag>
 		<name>sortContentProperty</name>
